--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://static.thenounproject.com/png/3632610-200.png">
     <title>task. Tracker</title>
     <link rel="stylesheet" href="style.css">
 </head>
