Readme file updated

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <section id="Task_2">
         Task 2
+        <!-- <embed id="img_1" src="https://parnab03.github.io/PRODIGY_WD_02/"> -->
         <img class="img_1" src="images/task1.png">
     </section>
 
