--- a/index.html
+++ b/index.html
@@ -22,28 +22,27 @@
 
     <section id="Task_1">
         Task 1
-        <img class="img_1" src="images/task1.png">
+        <a href="https://parnab03.github.io/PRODIGY_WD_01/"><img class="img_1" src="images/task1.png"></a>
     </section>
 
     <section id="Task_2">
         Task 2
-        <!-- <embed id="img_1" src="https://parnab03.github.io/PRODIGY_WD_02/"> -->
-        <img class="img_1" src="images/task1.png">
+        <a href="https://parnab03.github.io/PRODIGY_WD_02/"><img class="img_1" src="images/task2.png"></a>
     </section>
 
     <section id="Task_3">
         Task 3
-        <img class="img_1" src="images/task1.png">
+        <a href="#"><img class="img_1" src="images/task1.png"></a>
     </section>
 
     <section id="Task_4">
         Task 4
-        <img class="img_1" src="images/task1.png">
+        <a href="https://parnab03.github.io/PRODIGY_WD_05/"><img class="img_1" src="images/task4.png"></a>
     </section>
 
     <section id="contact">
         Contact
-        <img class="img_1" src="images/Parnab Animated Banner.png">
+        <a href="https://www.linkedin.com/in/parnab-bagchi-072966251/"><img class="contact-class" src="images/Parnab Animated Banner.png"></a>
     </section>
     <script src="script.js"></script>
 </body>
