--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section id="Task_3">
         Task 3
-        <a href="#"><img class="img_1" src="images/task1.png"></a>
+        <a href="https://parnab03.github.io/PRODIGY_WD_03/"><img class="img_1" src="images/task1.png"></a>
     </section>
 
     <section id="Task_4">
@@ -42,7 +42,7 @@
 
     <section id="contact">
         Contact
-        <a href="https://www.linkedin.com/in/parnab-bagchi-072966251/"><img class="contact-class" src="images/Parnab Animated Banner.png"></a>
+        <a href="https://www.linkedin.com/in/parnab-bagchi-072966251/"><img class="contact-class" src="images/contact.png"></a>
     </section>
     <script src="script.js"></script>
 </body>
